# allegro_pybind

./: CMakeLists.txt  README.md  example.py  pyproject.toml
include/: allegro_interface.h  consts.h
src/: CMakeLists.txt  _main.cpp  allegro_interface.cpp  main.cpp
